fix: overflow in hamburger

--- a/src/Styles/globals.css
+++ b/src/Styles/globals.css
@@ -39,6 +39,7 @@ input:-webkit-autofill:active {
 }
 body {
   width: calc(100vw - (100vw - 100%));
+  position: relative;
   overflow-x: hidden;
 }
 a{
